--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+body {
+  font-family: "Montserrat", sans-serif;
+}
+
 h1 {
   text-align: center;
   color: #ffa687;
@@ -45,7 +49,7 @@ button:hover {
 
 .container {
   max-width: 600px;
-  margin: 0 auto;
+  margin: 60px auto;
   padding: 30px 60px;
 }
 
@@ -61,4 +65,10 @@ button:hover {
 
 .footer {
   text-align: center;
+  opacity: 0.5;
+}
+
+.github-link {
+  color: #ffa687;
+  text-decoration: none;
 }
